--- a/Datawars-optimization-EDA.ipynb
+++ b/Datawars-optimization-EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 47,
    "id": "2f4fd473",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 48,
    "id": "ee68c4ed",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 49,
    "id": "66ec356e",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4  Britanny Bold      Delta  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 50,
    "id": "fa6940c6",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 51,
    "id": "99f9c25b",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 52,
    "id": "62608bbb",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "mean  2018.385187  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 53,
    "id": "1004093d",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "max    7.420560e+07    2020.000000  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 54,
    "id": "fcc0561f",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 55,
    "id": "008c4e4c",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 56,
    "id": "82c7b3be",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "np.int64(4)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 57,
    "id": "46f02e79",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "np.True_"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 58,
    "id": "90da4b9d",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 59,
    "id": "ecfaeedb",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 60,
    "id": "bcb4272e",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 61,
    "id": "32e97d1f",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
        "4  Britanny Bold      Delta  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 62,
    "id": "c18de03b",
    "metadata": {},
    "outputs": [],
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 63,
    "id": "eea5127a",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
        "max    7.420560e+07    2020.000000  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 64,
    "id": "29271dc3",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1063,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 65,
    "id": "e1c54df2",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 66,
    "id": "73583763",
    "metadata": {},
    "outputs": [
@@ -1158,8 +1158,297 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "e32c03fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Distributor</th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Sub-channel</th>\n",
+       "      <th>Product Name</th>\n",
+       "      <th>Product Class</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Name of Sales Rep</th>\n",
+       "      <th>Manager</th>\n",
+       "      <th>Sales Team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gottlieb-Cruickshank</td>\n",
+       "      <td>Zieme, Doyle and Kunze</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>51.2333</td>\n",
+       "      <td>22.5667</td>\n",
+       "      <td>Hospital</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Topipizole</td>\n",
+       "      <td>Mood Stabilizers</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>368</td>\n",
+       "      <td>1472.0</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Mary Gerrard</td>\n",
+       "      <td>Britanny Bold</td>\n",
+       "      <td>Delta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gottlieb-Cruickshank</td>\n",
+       "      <td>Feest PLC</td>\n",
+       "      <td>Świecie</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>53.4167</td>\n",
+       "      <td>18.4333</td>\n",
+       "      <td>Pharmacy</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Choriotrisin</td>\n",
+       "      <td>Antibiotics</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>591</td>\n",
+       "      <td>4137.0</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Jessica Smith</td>\n",
+       "      <td>Britanny Bold</td>\n",
+       "      <td>Delta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gottlieb-Cruickshank</td>\n",
+       "      <td>Medhurst-Beer Pharmaceutical Limited</td>\n",
+       "      <td>Rybnik</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>50.0833</td>\n",
+       "      <td>18.5000</td>\n",
+       "      <td>Pharmacy</td>\n",
+       "      <td>Institution</td>\n",
+       "      <td>Acantaine</td>\n",
+       "      <td>Antibiotics</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1980.0</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Steve Pepple</td>\n",
+       "      <td>Tracy Banks</td>\n",
+       "      <td>Bravo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gottlieb-Cruickshank</td>\n",
+       "      <td>Barton Ltd Pharma Plc</td>\n",
+       "      <td>Czeladź</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>50.3333</td>\n",
+       "      <td>19.0833</td>\n",
+       "      <td>Hospital</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Lioletine Refliruvax</td>\n",
+       "      <td>Analgesics</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>435</td>\n",
+       "      <td>2610.0</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Mary Gerrard</td>\n",
+       "      <td>Britanny Bold</td>\n",
+       "      <td>Delta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gottlieb-Cruickshank</td>\n",
+       "      <td>Keeling LLC Pharmacy</td>\n",
+       "      <td>Olsztyn</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>53.7800</td>\n",
+       "      <td>20.4942</td>\n",
+       "      <td>Pharmacy</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Oxymotroban Fexoformin</td>\n",
+       "      <td>Analgesics</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>458</td>\n",
+       "      <td>9160.0</td>\n",
+       "      <td>January</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Anne Wu</td>\n",
+       "      <td>Britanny Bold</td>\n",
+       "      <td>Delta</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Distributor                         Customer Name     City  \\\n",
+       "0  Gottlieb-Cruickshank               Zieme, Doyle and Kunze    Lublin   \n",
+       "1  Gottlieb-Cruickshank                             Feest PLC  Świecie   \n",
+       "2  Gottlieb-Cruickshank  Medhurst-Beer Pharmaceutical Limited   Rybnik   \n",
+       "3  Gottlieb-Cruickshank                 Barton Ltd Pharma Plc  Czeladź   \n",
+       "4  Gottlieb-Cruickshank                  Keeling LLC Pharmacy  Olsztyn   \n",
+       "\n",
+       "  Country  Latitude  Longitude   Channel  Sub-channel            Product Name  \\\n",
+       "0  Poland   51.2333    22.5667  Hospital      Private              Topipizole   \n",
+       "1  Poland   53.4167    18.4333  Pharmacy       Retail            Choriotrisin   \n",
+       "2  Poland   50.0833    18.5000  Pharmacy  Institution               Acantaine   \n",
+       "3  Poland   50.3333    19.0833  Hospital      Private    Lioletine Refliruvax   \n",
+       "4  Poland   53.7800    20.4942  Pharmacy       Retail  Oxymotroban Fexoformin   \n",
+       "\n",
+       "      Product Class  Quantity  Price   Sales    Month  Year Name of Sales Rep  \\\n",
+       "0  Mood Stabilizers       4.0    368  1472.0  January  2018      Mary Gerrard   \n",
+       "1       Antibiotics       7.0    591  4137.0  January  2018     Jessica Smith   \n",
+       "2       Antibiotics      30.0     66  1980.0  January  2018      Steve Pepple   \n",
+       "3        Analgesics       6.0    435  2610.0  January  2018      Mary Gerrard   \n",
+       "4        Analgesics      20.0    458  9160.0  January  2018           Anne Wu   \n",
+       "\n",
+       "         Manager Sales Team  \n",
+       "0  Britanny Bold      Delta  \n",
+       "1  Britanny Bold      Delta  \n",
+       "2    Tracy Banks      Bravo  \n",
+       "3  Britanny Bold      Delta  \n",
+       "4  Britanny Bold      Delta  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "4e5aaef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sales Team\n",
+       "Alfa       155235062.0\n",
+       "Bravo      153740360.0\n",
+       "Charlie    144486408.0\n",
+       "Delta      220729315.0\n",
+       "Name: Sales, dtype: float64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2[df_2['Month']=='January'].groupby('Sales Team')['Sales'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "44c19328",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3113/2126222314.py:1: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df_2['Date'] = pd.to_datetime(df_2['Month'] + ' ' + df_2['Year'].astype(str))\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_2['Date'] = pd.to_datetime(df_2['Month'] + ' ' + df_2['Year'].astype(str))\n",
+    "\n",
+    "# get quarter from date\n",
+    "df_2['Quarter'] = df_2['Date'].dt.to_period('Q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "06f9781d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quarter          2017Q1       2017Q2        2017Q3       2017Q4       2018Q1  \\\n",
+      "Sales Team                                                                     \n",
+      "Alfa        151232950.0  150214607.0  1.720874e+08  158491926.0  209914160.2   \n",
+      "Bravo       120077143.0  181238904.0  1.874773e+08  149300382.0  217116119.0   \n",
+      "Charlie     127212399.0  135416019.0  1.444627e+08  130266708.0  190932967.6   \n",
+      "Delta       177113537.0  212233494.0  2.505476e+08  254106861.0  294758649.0   \n",
+      "\n",
+      "Quarter          2018Q2       2018Q3       2018Q4       2019Q1        2019Q2  \\\n",
+      "Sales Team                                                                     \n",
+      "Alfa        179667294.0  178931794.0  208616921.0  146402092.0  1.284361e+08   \n",
+      "Bravo       174504103.8  230183064.0  203549599.0  158982712.0  1.447065e+08   \n",
+      "Charlie     229954000.0  188898458.0  196431706.0  178397841.0  1.786542e+08   \n",
+      "Delta       260735968.0  279742079.0  262955481.0  204921728.0  1.906025e+08   \n",
+      "\n",
+      "Quarter          2019Q3        2019Q4       2020Q1       2020Q2       2020Q3  \\\n",
+      "Sales Team                                                                     \n",
+      "Alfa        183336651.0  1.399056e+08  136483050.0  117209593.0  157737847.0   \n",
+      "Bravo       194841555.0  1.601338e+08  132969682.0  140291837.0  171337884.0   \n",
+      "Charlie     259089692.0  1.712750e+08  133344255.0  151252928.0  157342904.0   \n",
+      "Delta       286735038.0  2.045119e+08  175263336.0  154132287.0  216395886.0   \n",
+      "\n",
+      "Quarter          2020Q4  \n",
+      "Sales Team               \n",
+      "Alfa        162300995.0  \n",
+      "Bravo       190991881.0  \n",
+      "Charlie     252037721.0  \n",
+      "Delta       210580329.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "quarterly_sales_pivot = df_2.groupby(['Sales Team', 'Quarter'])['Sales'].sum().unstack(fill_value=0)\n",
+    "print(quarterly_sales_pivot)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "951d16c1",
+   "id": "e59feecf",
    "metadata": {},
    "outputs": [],
    "source": []
